<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.upload.FileUploadFragment">

    <!-- Title Text -->
    <TextView
        android:id="@+id/uploadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_picture"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Image Preview -->
    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/image_placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/uploadTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Select Image Button -->
    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/select_image"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="sans-serif"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/imagePreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <!-- Upload Button -->
    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/upload"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="sans-serif"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/selectImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <ImageView
        android:id="@+id/secondImagePreview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/image_placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/uploadButton"
        app:layout_constraintLeft_toLeftOf="@id/uploadButton"
        app:layout_constraintRight_toRightOf="@id/uploadButton"
        />



</androidx.constraintlayout.widget.ConstraintLayout>